Animated start menu & fixed taskbar spacing

--- a/src/components/taskbar/Taskbar.scss
+++ b/src/components/taskbar/Taskbar.scss
@@ -1,7 +1,8 @@
 .taskbar {
     display: flex;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+    z-index: 100;
+    bottom: 38px;
     left: 0;
     width: 100%;
     height: 40px;
@@ -16,17 +17,16 @@
     );
 
     &__container {
-        display: grid;
-        grid-template-columns: 80px auto auto auto 60px;
+        display: flex;
         width: 100%;
         height: 100%;
         position: relative;
+        z-index: 100;
     }
 
     &__start-menu {
-        grid-column: 1;
         position: relative;
-        max-width: 80px;
+        min-width: 80px;
         
 
         &--icon {
@@ -44,16 +44,16 @@
     }
 
     &__icon-section {
-        grid-column: 2;
+        min-width: 200px;
+        max-width: 200px;
+        padding-right: 20px;
         display: flex;
         align-items: center;
         gap: 5px;
-        width: 100%;
-        transition: max-width 0.3s ease;
-        max-width: 200px;
+        transition: all 0.3s ease;
 
         &.expanded {
-            max-width: 240px;
+        max-width: 355px;
         }
 
         &--icon {
@@ -86,7 +86,6 @@
 
         &--expand-arrows {
             display: flex;
-            z-index: 1;
             position: relative;
             margin-bottom: 1rem;
 
@@ -102,26 +101,23 @@
     }
 
     &__apps {
-        grid-column: 3;
         display: flex;
     }
 
     &__system-icons {
-        grid-column: 4;
         display: flex;
     }
 
     &__time {
         display: flex;
         align-items: center;
-        grid-column: 5;
-        width: 80px;
+        width: 60px;
         height: auto;
-        z-index: 1;
         color: #fff;
         font-weight: 500;
         font-size: 1.2rem;
         opacity: 0.9;
         cursor: default;
+        margin-left: auto;
     }
 }
