--- a/src/components/taskbar/taskbar-components/StartMenu.scss
+++ b/src/components/taskbar/taskbar-components/StartMenu.scss
@@ -3,11 +3,12 @@
     height: 500px;
     cursor: default;
     background-color: var(--darkturquoise-transparent3);
-    position: absolute;
+    position: fixed;
     bottom: 41px;
     left: 0;
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
+    z-index: 1;
     border: 0.3px solid rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 2px rgba(255, 255, 255, 0.8),
         0 0 4px rgba(0, 0, 0, 0.5);
